# cachet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  pyproject.toml
.github/: README.md  main-branch-protection.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/workflows/: README.md  ci.yml
benchmarks/: README.md
benchmarks/_template/: README.md
benchmarks/appendix/: README.md
benchmarks/current/: README.md
benchmarks/databricks/: CURRENT.md  README.md
benchmarks/native-engine/: README.md
benchmarks/sglang/: README.md
benchmarks/storage/: README.md
benchmarks/vllm/: README.md
databricks/: README.md  databricks.yml
databricks/engine-probe/: README.md  databricks.yml
databricks/runtime-kv-offload-probe/: README.md  runner.py
databricks/storage-benchmark/: databricks.yml
databricks/vllm-smoke/: README.md  databricks.yml
docs/: README.md  concepts.md  evidence-policy.md  getting-started.md  legacy-compatibility-removal.md  native-engine-integration.md  production.md  repo-map.md  v1-requirements-matrix.md
docs/release-ops/: README.md  maintainer-reference.md  maintainer-release-checklist.md
evidence/: README.md
evidence/dependency-freshness/: README.md
evidence/legacy-migration/: README.md
examples/: README.md  quickstart_local.py
pr-evidence/: add-probe-fixture-actions.json  admission-queue-input-validation.json  benchmark-example-input-validation.json  benchmark-plan-engine-probes.json  benchmark-plan-strict-v1-bundle-validation.json  benchmark-plan-strict-v1-completeness-validation.json  benchmark-plan-strict-v1-completeness.json  benchmark-suite-input-validation.json  cross-check-probe-action-evidence.json  databricks-engine-probe-matrix-release-safe.json  databricks-engine-probe-release-safe.json  databricks-run-status-submit-payload-provenance.json  databricks-run-status-summary.json  gpu-byte-multiplier-validation.json  harden-benchmark-generation-schema-validation.json  harden-benchmark-generation-schema.json  harden-benchmark-measurement-schema-validation.json  harden-v1-evidence-identities-validation.json  harden-v1-evidence-identities.json  manifest-content-hash-lookup.json  pr-evidence-sidecar-validation.json  reject-duplicate-wheel-members.json  release-bundle-databricks-status-compactness.json  release-bundle-databricks-status-sidecar.json  release-bundle-plan-execution-sidecar.json  release-evidence-source-fingerprints.json  release-readiness-doc-sync.json  release-wheel-typed-markers-validation.json  repository-hygiene-dirty-tracked-validation.json  repository-hygiene-untracked-artifacts-validation.json  require-admin-branch-protection.json  require-cachet-repo-branding-validation.json  source-document-input-validation-validation.json  strict-v1-connector-actions.json  strict-v1-native-factory-support.json  tiered-cache-observability.json  tighten-wheel-version-provenance.json  validate-comparison-quality-deltas-validation.json  validate-measurement-quality-booleans.json  validate-report-quality-rates-validation.json  (+6 more)
pr-evidence/admission-queue-input-validation/: pr-evidence-validation.json
pr-evidence/audit-allowed-open-prs/: pr-evidence-validation.json
pr-evidence/avoid-double-local-cache-probe-reads/: pr-evidence.json
pr-evidence/benchmark-job-native-delegate-env/: README.md  pr-evidence-validation.json  pr-evidence.json
pr-evidence/benchmark-plan-execution-writer-provenance/: README.md  pr-evidence-validation.json
pr-evidence/benchmark-plan-github-governance/: pr-evidence.json
pr-evidence/benchmark-plan-probe-fixtures/: pr-evidence-validation.json
pr-evidence/benchmark-plan-repository-hygiene/: pr-evidence.json
pr-evidence/benchmark-report-folders/: README.md
pr-evidence/cachet-adapter-native-import-aliases/: pr-evidence-validation.json  pr-evidence.json
pr-evidence/cachet-branding-source-layout-docs/: README.md
pr-evidence/cachet-cli-aliases/: pr-evidence-validation.json
pr-evidence/cachet-first-quickstart/: pr-evidence.json
pr-evidence/cachet-project-metadata/: pr-evidence.json
pr-evidence/cachet-unified-package-surface/: pr-evidence.json
pr-evidence/cachet-vendor-engine-adapters/: README.md  pr-evidence.json
pr-evidence/ci-console-script-entrypoint-guard/: pr-evidence-validation.json
pr-evidence/ci-metadata-dependency-gates/: README.md  pr-evidence.json
pr-evidence/clarify-sglang-benchmark-boundary/: README.md
pr-evidence/compatibility-databricks-run-status/: pr-evidence.json
pr-evidence/confine-file-uri-storage-paths/: README.md
pr-evidence/confine-local-reader-root/: pr-evidence-validation.json  pr-evidence.json
pr-evidence/connector-actions-record-contract/: README.md  pr-evidence.json
pr-evidence/current-benchmark-results-index/: pr-evidence-validation.json  pr-evidence.json
pr-evidence/current-benchmark-status/: README.md  pr-evidence-validation.json  pr-evidence.json
src/: README.md
tests/: README.md  test_adapter_scaffold.py  test_admission.py  test_benchmark_dataset_sources.py  test_benchmark_handoffs.py  test_benchmark_plan.py  test_benchmark_plan_executor.py  test_benchmark_runner.py  test_benchmarks.py  test_cache.py  test_databricks_engine_probe_job.py  test_databricks_job.py  test_databricks_runs.py  test_databricks_sglang_smoke_job.py  test_databricks_storage_benchmark_job.py  test_databricks_vllm_smoke_job.py  test_dataset_prep.py  test_dependency_freshness.py  test_engine.py  test_engine_adapters.py  test_engine_launch_config.py  test_engine_probe.py  test_github_governance.py  test_kvpack.py  test_legacy_compatibility.py  test_live_server.py  test_model_profiles.py  test_native_probe_factories.py  test_native_probe_metadata.py  test_openai_compatible.py  test_planner_materializer.py  test_pr_evidence.py  test_probe_fixtures.py  test_project_governance.py  test_public_package.py  test_release_bundle.py  test_release_evidence.py  test_repository_hygiene.py  test_runtime_kv_offload_probe.py  test_runtime_telemetry.py  (+29 more)
(+1098 files in other folders)
