[build-system]
requires = ["poetry-core==2.4.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "cachet-kv"
version = "0.2.0"
description = "Cachet document KV-cache orchestration and materialization for long-context LLM serving."
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "OpenTable Data Science" },
]
keywords = ["cachet", "kv-cache", "llm-serving", "long-context", "vllm", "sglang", "databricks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "packaging==26.2",
]

[project.urls]
Repository = "https://github.com/puyuanOT/cachet"
Issues = "https://github.com/puyuanOT/cachet/issues"

[project.optional-dependencies]
databricks = [
  "pyspark==4.1.2",
  "databricks-sdk==0.118.0",
]
test = [
  "pytest==9.1.1",
]

[project.scripts]
cachet-benchmark-plan = "cachet.benchmark_plan:main"
cachet-benchmark-handoffs = "cachet.benchmark_handoffs:main"
cachet-benchmark-handoff-manifest = "cachet.benchmark_handoffs:manifest_main"
cachet-benchmark-handoff-bundles = "cachet.benchmark_handoffs:bundle_main"
cachet-native-probe-scaffold = "cachet.adapter_scaffold:main"
cachet-run-benchmark-plan = "cachet.benchmark_plan_executor:main"
cachet-databricks-job = "cachet.databricks_job:main"
cachet-databricks-runs = "cachet.databricks_runs:main"
cachet-storage-benchmark = "cachet.storage_benchmark:main"
cachet-storage-benchmark-databricks-job = "cachet.databricks_storage_benchmark_job:main"
cachet-templates = "cachet.template_resources:main"
cachet-release-evidence = "cachet.release_evidence:main"
cachet-release-bundle = "cachet.release_bundle:main"
cachet-pr-evidence = "cachet.pr_evidence:main"
cachet-github-governance = "cachet.github_governance:main"
cachet-repository-hygiene = "cachet.repository_hygiene:main"
cachet-serving-env = "cachet.serving_env:main"
cachet-native-probe-factories = "cachet.native_probe_factories:main"
cachet-engine-probe = "cachet.engine_probe:main"
cachet-engine-launch-config = "cachet.engine_launch_config:main"
cachet-engine-probe-fixture = "cachet.probe_fixtures:main"
cachet-engine-probe-databricks-job = "cachet.databricks_engine_probe_job:main"
cachet-vllm-runtime-preflight = "cachet.vllm_runtime_preflight:main"
cachet-sglang-runtime-preflight = "cachet.sglang_runtime_preflight:main"
cachet-vllm-smoke = "cachet.vllm_smoke:main"
cachet-vllm-smoke-databricks-job = "cachet.databricks_vllm_smoke_job:main"
cachet-sglang-smoke = "cachet.sglang_smoke:main"
cachet-sglang-smoke-databricks-job = "cachet.databricks_sglang_smoke_job:main"
document-kv-benchmark-plan = "document_kv_cache.benchmark_plan:main"
document-kv-benchmark-handoffs = "document_kv_cache.benchmark_handoffs:main"
document-kv-benchmark-handoff-manifest = "document_kv_cache.benchmark_handoffs:manifest_main"
document-kv-benchmark-handoff-bundles = "document_kv_cache.benchmark_handoffs:bundle_main"
document-kv-native-probe-scaffold = "document_kv_cache.adapter_scaffold:main"
document-kv-run-benchmark-plan = "document_kv_cache.benchmark_plan_executor:main"
document-kv-databricks-job = "document_kv_cache.databricks_job:main"
document-kv-databricks-runs = "document_kv_cache.databricks_runs:main"
document-kv-storage-benchmark = "document_kv_cache.storage_benchmark:main"
document-kv-storage-benchmark-databricks-job = "document_kv_cache.databricks_storage_benchmark_job:main"
document-kv-templates = "document_kv_cache.template_resources:main"
document-kv-release-evidence = "document_kv_cache.release_evidence:main"
document-kv-release-bundle = "document_kv_cache.release_bundle:main"
document-kv-pr-evidence = "document_kv_cache.pr_evidence:main"
document-kv-github-governance = "document_kv_cache.github_governance:main"
document-kv-repository-hygiene = "document_kv_cache.repository_hygiene:main"
document-kv-serving-env = "document_kv_cache.serving_env:main"
document-kv-native-probe-factories = "document_kv_cache.native_probe_factories:main"
document-kv-engine-probe = "document_kv_cache.engine_probe:main"
document-kv-engine-launch-config = "document_kv_cache.engine_launch_config:main"
document-kv-engine-probe-fixture = "document_kv_cache.probe_fixtures:main"
document-kv-engine-probe-databricks-job = "document_kv_cache.databricks_engine_probe_job:main"
document-kv-vllm-runtime-preflight = "document_kv_cache.vllm_runtime_preflight:main"
document-kv-sglang-runtime-preflight = "document_kv_cache.sglang_runtime_preflight:main"
document-kv-vllm-smoke = "document_kv_cache.vllm_smoke:main"
document-kv-vllm-smoke-databricks-job = "document_kv_cache.databricks_vllm_smoke_job:main"
document-kv-sglang-smoke = "document_kv_cache.sglang_smoke:main"
document-kv-sglang-smoke-databricks-job = "document_kv_cache.databricks_sglang_smoke_job:main"
[tool.poetry]
packages = [
  { include = "cachet", from = "src" },
  { include = "document_kv_cache", from = "src" },
  { include = "vllm_kv_injection", from = "src" },
  { include = "sglang_kv_injection", from = "src" },
]
include = [
  { path = "src/cachet/__init__.pyi", format = ["sdist", "wheel"] },
  { path = "src/cachet/py.typed", format = ["sdist", "wheel"] },
  { path = "src/document_kv_cache/py.typed", format = ["sdist", "wheel"] },
  { path = "src/vllm_kv_injection/py.typed", format = ["sdist", "wheel"] },
  { path = "src/sglang_kv_injection/py.typed", format = ["sdist", "wheel"] },
  { path = "src/document_kv_cache/templates/**/*.yml", format = ["sdist", "wheel"] },
  { path = "src/document_kv_cache/templates/**/*.md", format = ["sdist", "wheel"] },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
